PageRating/src/objects/Event_Request__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Expense__c</fullName>
        <inlineHelpText>Actual expense incurred</inlineHelpText>
        <label>Actual Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Approved by</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CreatedBy.Department</formula>
        <inlineHelpText>Department of the user creating the Event Request</inlineHelpText>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_End_Time__c</fullName>
        <label>Event End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <inlineHelpText>Business justification for having this event</inlineHelpText>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Predicted_Expense__c</fullName>
        <inlineHelpText>Rough estimate of expense predicted</inlineHelpText>
        <label>Predicted Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <inlineHelpText>Event start time</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Draft&apos;</defaultValue>
        <inlineHelpText>Lifecycle status of the event</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Commenced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <inlineHelpText>If your venue is not listed, please contact your administrator</inlineHelpText>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Event Requests</relationshipLabel>
        <relationshipName>Event_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Event Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RQ-{0000000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>